# lxml2-query-v1

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml  devskim.yml
cmake/: LTO.cmake  Warnings.cmake  lxml2-queryConfig.cmake.in
include/: AttributeSelector.h  BinarySelector.h  Document.h  Helpers.h  Lexer.h  Node.h  Parser.h  QueryResult.h  Selector.h  TagSelector.h  TextSelector.h  UnarySelector.h  lxml2-query.h
source/: AttributeSelector.cpp  BinarySelector.cpp  Document.cpp  Lexer.cpp  Node.cpp  Parser.cpp  QueryResult.cpp  Selector.cpp  TagSelector.cpp  TextSelector.cpp  UnarySelector.cpp
tests/: AttributeSelectorTest.cpp  BinarySelectorTest.cpp  CMakeLists.txt  DocumentTest.cpp  HelpersTest.cpp  NodeTest.cpp  ParserTest.cpp  QueryResultTest.cpp  QueryTest.cpp  SelectorTest.cpp  TagSelectorTest.cpp  TestCase.hpp  TestsUtils.hpp  TextSelectorTest.cpp  UnarySelectorTest.cpp
tests/cmake/: content.html
